--- a/styles/style.css
+++ b/styles/style.css
@@ -13,14 +13,15 @@ dark violet: 4d0058
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Arimo', sans-serif;
+    font-family: 'Istok Web', sans-serif;
+
 }
 
 /* header */
 
 .main-header {
     height: 54px;
-    background: linear-gradient(0deg, #f8e3a3 0%, #faf1d5 100%);
+    background: linear-gradient(0deg, #f8d0a3 0%, #faf1d5 100%);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -41,7 +42,7 @@ dark violet: 4d0058
     border-right: 1px solid #92256650;
     padding: 5px;
     height: 44px;
-    background: linear-gradient(0deg, #7e4b6a 0%, #f3dbbd 100%);
+    background: linear-gradient(0deg, #b86d9aa4 0%, #f3dbbd 100%);
 }
 
 .main-navigation__item {
@@ -78,18 +79,18 @@ dark violet: 4d0058
 
 .header__enter-btn {
     background: #fff2c8;
-    border: 1px solid #E4AD5D;
+    border: 1px solid #83426985;
     color: #6a1b4a;
     font-size: 18px;
-    padding: 5px 10px;
+    padding: 5px 15px;
     height: 36px;
     border-radius: 4px;
 }
 
 .header__enter-btn:hover {
-    background: #f7e2a4;
+    background: #d88fbb51;
     color: #6a1b4ab6;
-    box-shadow: 0 0 10px #E4AD5D;
+    box-shadow: 0 0 10px #6a1b4a91;
     transition: 0.5s;
 }
 
@@ -112,7 +113,7 @@ dark violet: 4d0058
 
 .search-section {
     background: url(../img/main/main_bg.jpg) center/cover;
-    height: 650px;
+    height: 680px;
 }
 
 .search-section::after {
@@ -121,8 +122,8 @@ dark violet: 4d0058
 	top: 54px;
 	left: 0;
 	width: 100%;
-	height: 650px;
-    background: #f9f0d627;
+	height: 680px;
+    background: #46433c27;
 }
 
 .search-section h1,
@@ -134,20 +135,19 @@ dark violet: 4d0058
 
 .search-section h1,
 .search-section h3 {
-    font-family: 'Playfair Display', serif;
     text-align: center;
-    color: #053841;
-    text-shadow: 1px 1px 2px #021118, 0 0 1em #bfe8f0;
+    color: #d9e4e9;
+    text-shadow: 1px 1px 2px #021118, 0 0 1em #053841;
 }
 
 .search-section h1 {
     font-size: calc(1rem + 3.8vw);
     padding-top: 60px;
+    padding-bottom: 10px;
 }
 
 .search-section h3 {
-    font-style: italic;
-    font-size: calc(0.75rem + 1.1vw);
+    font-size: calc(0.7rem + 1vw);
     padding-bottom: 80px;
 }
 
@@ -167,8 +167,8 @@ dark violet: 4d0058
 }
 
 .search-form-info {
-    color: #032329;
-    text-shadow: 1px 1px 3px #bed8e4;
+    color: #d9e4e9;
+    text-shadow: 1px 1px 2px #021118, 0 0 1.5em #053841;
     font-size: 16px;
     position: relative;
     left: 15px;
@@ -183,7 +183,7 @@ dark violet: 4d0058
     color: #015f70;
     font-size: 20px;
     background: #dde3e4;
-    border: #c3d1d3;
+    border: #dde3e4;
 }
 
 .main__search-btn {
@@ -205,16 +205,34 @@ dark violet: 4d0058
     background: linear-gradient(0deg, #6b3d59 0%, #c9759b 100%);
 }
 
+/* other sections */
+
 .sections-container {
-    margin: 0 30px;
+    margin: 10px 30px;
     padding: 10px;
+    background: #c3d1d3;
+    border-radius: 6px;
+}
+
+.main-section:not(.search-section) {
+    padding: 60px 20px;
+    margin: 80px 20px;
+    border: 1px solid #015f705d;
+    border-radius: 5px;
+    box-shadow: -5px 5px 15px #84aeb4;
     background: #fff2c8;
 }
 
 .main-section h2 {
-    font-family: 'Playfair Display', serif;
+    color: #053841;
+    font-size: 28px;
 }
-/* main recommend */
+
+.heading-definition {
+    padding-bottom: 30px;
+    color: #053841;
+    font-size: 20px;
+}
 
 .recommend-list {
     list-style: none;
@@ -227,12 +245,69 @@ dark violet: 4d0058
     box-shadow: 0 0 10px #c9759b;
     padding: 10px;
     margin: 5px 2px;
+    color: #4D1335;
+    background: #f5c5e256;
 }
 
 .recommend-img {
-    width: 300px;
+    width: 280px;
 }
 
+.advantages-list {
+    list-style: none;
+    display: flex;
+    padding-bottom: 80px;
+}
+
+.advantages-list__item {
+    padding: 10px 20px 5px;
+    margin: 5px;
+    color: #2e0c20;
+    /* box-shadow: 0 0 10px #c9759b; */
+    border-radius: 5px;
+}
+
+.advantages-list__item:nth-child(2n-1) {
+    position: relative;
+    top: 80px;
+}
+
+.advantages-list__item h4 {
+    padding-bottom: 10px;
+}
+  
 .advantages-icon {
     width: 100px;
+}
+
+.contacts-list {
+    color: #2e0c20;
+    list-style: none;
+}
+
+.contacts-list__item {
+    padding: 10px 0;
+    font-size: 18px;
+}
+
+.socials-list {
+    margin-left: 20px;
+    list-style: none;
+    font-size: 16px;
+}
+
+.contacts-list a {
+    text-decoration: none;
+    color: #7e4b6a;
+}
+
+.contacts-list a:hover {
+    color: #6a1b4a;
+    text-decoration: underline;
+}
+
+/* footer */
+
+.main-footer {
+    background: linear-gradient(0deg, #6b3d59 0%, #7e4b6a 100%);
 }
