--- a/styles/main_page.css
+++ b/styles/main_page.css
@@ -42,7 +42,7 @@
 
 .search-form {
     width: 100%;
-    height: 100%;
+    height: auto;
     top: 54;
     left: 0;
     display: flex;
@@ -52,6 +52,10 @@
 }
 
 .search-form-content {
+    display: flex;
+}
+
+.search-form-content-inputs {
     display: flex;
 }
 
@@ -73,11 +77,11 @@
     font-size: 20px;
     background: #dde3e4;
     border: #dde3e4;
+    position: relative;
+    bottom: 27px;
 }
 
 .main__search-btn {
-    position: relative;
-    top: 25px;
     width: 220px;
     height: 70px;
     color: #4D1335;
@@ -126,7 +130,6 @@
 }
 
 .recommend-list {
-    list-style: none;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -145,7 +148,6 @@
 }
 
 .advantages-list {
-    list-style: none;
     display: flex;
     padding-bottom: 80px;
 }
@@ -174,7 +176,6 @@
 
 .contacts-list {
     color: #2e0c20;
-    list-style: none;
 }
 
 .contacts-list__item {
@@ -184,7 +185,6 @@
 
 .socials-list {
     margin-left: 20px;
-    list-style: none;
     font-size: 16px;
 }
 
@@ -197,3 +197,47 @@
     color: #6a1b4a;
     text-decoration: underline;
 }
+
+@media screen and (max-width: 1380px) {
+    .recommend-img {
+        width: 500px;
+    }
+    .recommend-list {
+        justify-content: space-evenly;
+    }
+}
+
+/* @media screen and (max-width: 1240px) {
+    .recommend-img {
+        width: 390px;
+    }
+} */
+
+@media screen and (max-width: 1000px) {
+    .search-form-content {
+        display: block;
+    }
+    .main__search-btn {
+        width: 100%;
+        margin: 0;
+    }
+    .recommend-img {
+        width: 290px;
+    }
+    .advantages-list {
+        flex-wrap: wrap;
+    }
+    .advantages-list__item {
+        position: static;
+        width: 100%;
+    }
+    .advantages-list__item:nth-child(2n-1) {
+        position: static;
+    }
+}
+
+/* @media screen and (max-width: 800px) {
+    .recommend-img {
+        width: 400px;
+    }
+} */
