--- a/styles/main_page.css
+++ b/styles/main_page.css
@@ -106,6 +106,7 @@
     background: #e0e9eb;
     border-radius: 6px;
     box-shadow: 8px -3px 15px #69878b;
+    max-width: 1400px;
 }
 
 .main-section:not(.search-section) {
@@ -132,7 +133,7 @@
 .recommend-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .recommend-card {
@@ -198,20 +199,7 @@
     text-decoration: underline;
 }
 
-@media screen and (max-width: 1380px) {
-    .recommend-img {
-        width: 500px;
-    }
-    .recommend-list {
-        justify-content: space-evenly;
-    }
-}
 
-/* @media screen and (max-width: 1240px) {
-    .recommend-img {
-        width: 390px;
-    }
-} */
 
 @media screen and (max-width: 1000px) {
     .search-form-content {
@@ -220,9 +208,6 @@
     .main__search-btn {
         width: 100%;
         margin: 0;
-    }
-    .recommend-img {
-        width: 290px;
     }
     .advantages-list {
         flex-wrap: wrap;
@@ -236,8 +221,46 @@
     }
 }
 
-/* @media screen and (max-width: 800px) {
-    .recommend-img {
-        width: 400px;
+@media screen and (max-width: 800px) {
+    /* .main__search-btn {
+        height: 55px;
+        font-size: 22px;
+    } */
+
+    .search-form-content-inputs {
+        flex-wrap: wrap-reverse;
+        justify-content: stretch;
+        width: 100%;
+    }
+    /* .main__input {
+        width: 100%;
+    } */
+    /* .main__input {
+        width: 150px;
+        height: 40px;
+    } */
+}
+
+/* @media screen and (max-width: 550px) {
+    .main__search-btn {
+        height: 45px;
+        font-size: 16px;
+    }
+    .main__input {
+        width: 120px;
+        height: 30px;
+        font-size: 16px;
+        padding: 2px;
+    }
+
+    .search-form-content-inputs {
+        flex-direction: column;
+    }
+    .search-section {
+        height: 100%;
+        padding-bottom: 30px;
+    }
+    .search-section::after {
+        height: 300px;
     }
 } */
