media for main page

--- a/styles/main_page.css
+++ b/styles/main_page.css
@@ -81,6 +81,10 @@
     bottom: 27px;
 }
 
+.main__search-dates {
+    display: flex;
+}
+
 .main__search-btn {
     width: 220px;
     height: 70px;
@@ -211,6 +215,7 @@
     }
     .advantages-list {
         flex-wrap: wrap;
+        padding-bottom: 0;
     }
     .advantages-list__item {
         position: static;
@@ -221,40 +226,12 @@
     }
 }
 
-@media screen and (max-width: 800px) {
-    /* .main__search-btn {
-        height: 55px;
-        font-size: 22px;
-    } */
-
+@media screen and (max-width: 780px) {
     .search-form-content-inputs {
-        flex-wrap: wrap-reverse;
-        justify-content: stretch;
-        width: 100%;
+        display: block;
     }
-    /* .main__input {
-        width: 100%;
-    } */
-    /* .main__input {
-        width: 150px;
-        height: 40px;
-    } */
-}
-
-/* @media screen and (max-width: 550px) {
-    .main__search-btn {
-        height: 45px;
-        font-size: 16px;
-    }
-    .main__input {
-        width: 120px;
-        height: 30px;
-        font-size: 16px;
-        padding: 2px;
-    }
-
-    .search-form-content-inputs {
-        flex-direction: column;
+    .main__search-city {
+        text-align: center;
     }
     .search-section {
         height: 100%;
@@ -263,4 +240,24 @@
     .search-section::after {
         height: 300px;
     }
-} */
+    .search-section h3 {
+        padding-bottom: 40px;
+    }
+    .main__search-btn {
+        height: 55px;
+        font-size: 22px;
+    }
+    .main__input {
+        height: 40px;
+    }
+}
+
+@media screen and (max-width: 530px) {
+    .main__search-dates {
+        display: block;
+    }
+    .main-section:not(.search-section) {
+        padding: 30px 10px;
+        margin: 40px 10px;
+    }
+}
