--- a/styles/housing.css
+++ b/styles/housing.css
@@ -1,18 +1,54 @@
 .housing-main {
     margin: 15px 30px;
     padding: 10px;
+    display: flex;
+    min-height: calc(100vh - 250px);
+}
+
+/* aside */
+
+.options-container {
+    width: 25%;
+    padding: 10px 25px;
+    margin-right: 10px;
     background: #e0e9eb;
     border-radius: 6px;
-    box-shadow: 8px -3px 15px #69878b;
-    max-width: 1400px;
+    box-shadow: -8px -3px 15px #97b4b8;
+}
+
+.options-list__item {
+    margin-top: 25px;
+    color: #2e0c20;
+    font-size: 18px;
+}
+
+.options-list__item p {
+    margin-bottom: 0;
+}
+
+.options-list__item > input {
+    width: 250px;
+    color: #2e0c20;
+    font-size: 16px;
+    padding: 2px 5px;
+    border-radius: 5px;
+    border: none;
+}
+
+.housing-main-section {
+    width: 75%;
+    padding: 10px 25px;
+    background: #e0e9eb;
+    border-radius: 6px;
+    box-shadow: 8px -3px 15px #97b4b8;
 }
 
 
 
 .housing-address > img {
     width: 25px;
-    position: relative;
-    top: 6px;
+    /* position: relative;
+    top: 6px; */
 }
 
 .stars-rating__item {
@@ -28,8 +64,35 @@
 }
 
 
+.carousel-item {
+    height: 500px;
+    width: 100%;
+}
+
+.d-block {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+
+
 
 .guest-avatar {
     height: 40px;
     border-radius: 50%;
+}
+
+
+
+@media screen and (max-width: 1000px) {
+
+}
+
+@media screen and (max-width: 780px) {
+
+}
+
+@media screen and (max-width: 530px) {
+    
 }
