--- a/styles/rentals.css
+++ b/styles/rentals.css
@@ -1,5 +1,5 @@
 .page-wrapper {
-    margin: 15px 30px;
+    margin: 15px auto;
     display: flex;
     min-height: calc(100vh - 250px); /* прижать футер к низу, если вариантов мало */
 }
@@ -7,7 +7,7 @@
 .rentals-aside {
     width: 30%;
     padding: 10px 25px;
-    margin-right: 10px;
+    margin: 10px 5px 10px 20px;
     background: #e0e9eb;
     border-radius: 6px;
     box-shadow: -8px -3px 15px #97b4b8;
@@ -15,6 +15,7 @@
 
 .rentals-main {
     width: 70%;
+    margin: 10px 20px 10px 5px;
     padding: 10px 25px;
     background: #e0e9eb;
     border-radius: 6px;
@@ -27,13 +28,13 @@
     margin: 25px 10px;
 }
 
-.options-container > div {
+.option-block {
     margin-bottom: 25px;
     color: #2e0c20;
     font-size: 18px;
 }
 
-.options-container > div > input {
+.option-input {
     width: 250px;
     color: #2e0c20;
     font-size: 16px;
@@ -42,8 +43,16 @@
     border: none;
 }
 
-.options-container > .price-option input {
+.price-option .option-input {
     width: 88px;
+}
+
+#check-options {
+    display: none;
+}
+
+.check-options-icon {
+    display: none;
 }
 
 /* main */
@@ -93,16 +102,17 @@
     opacity: 0.5;
 }
 
-.carousel-wrapper > img {
-    width: 300px;
+.variant-image {
+    width: 320px;
 }
 
 .carousel-wrapper {
-    position: relative;
-    padding-right: 20px;
+    /* position: relative; */
+    width: 320px;
+    margin-right: 20px;
 }
 
-.carousel-wrapper::before {
+/* .carousel-wrapper::before {
     content: '1/2';
     position: absolute;
     left: 50%;
@@ -118,7 +128,7 @@
     font-size: 13px;
     line-height: 20px;
     padding: 0 4px;
-}
+} */
 
 .housing-address > img,
 .housing-price > img {
@@ -132,18 +142,76 @@
     .variant-card {
         flex-direction: column;
     }
-    .options-container > div > input {
+    .option-input {
         width: 200px;
     }
-    .options-container > .price-option input {
+    .price-option .option-input {
         display: block;
     }
 }
 
 @media screen and (max-width: 780px) {
-    /* перестроить aside наверх */
+    .page-wrapper {
+        flex-direction: column;
+        margin: 0;
+    }
+    .rentals-aside,
+    .rentals-main {
+        width: 100%;
+        margin: 0 auto;
+        padding: 10px 0;
+        border-radius: 0;
+        box-shadow: none;
+    }
+    .options-container {
+        display: flex;
+        flex-direction: column;
+    }
+    .option-block {
+        padding: 10px;
+    }
+    .variant-card {
+        flex-direction: row;
+    }
+    .select-sorting-container {
+        display: inline-block;
+        margin: 0 15px;
+    }
+    .check-options-icon {
+        display: inline-block;
+        position: relative;
+        top: 8px;
+        cursor: pointer;
+    }
+    .options-container {
+        display: none;
+    }
+    #check-options:checked ~ .options-container {
+		display: flex;
+	}
 }
 
 @media screen and (max-width: 530px) {
+    .variant-card {
+        flex-direction: column;
+    }
+    .carousel-wrapper {
+        /* padding: 0; */
+        width: 100%;
+    }
+    .variant-image {
+        width: 100%;
+    }
+    .select-sorting {
+        font-size: 14px;
+        width: 100%;
+    }
+    .option-block {
+        font-size: 16px;
+    }
     
+    .option-input {
+        width: 180px;
+        font-size: 14px;
+    }
 }
