--- a/styles/housing.css
+++ b/styles/housing.css
@@ -1,32 +1,42 @@
-.housing-main {
-    margin: 15px 30px;
-    padding: 10px;
+.page-wrapper {
+    margin: 15px auto;
     display: flex;
     min-height: calc(100vh - 250px);
 }
 
-/* aside */
-
-.options-container {
-    width: 25%;
+.housing-aside {
+    width: 30%;
     padding: 10px 25px;
-    margin-right: 10px;
+    margin: 10px 5px 10px 20px;
     background: #e0e9eb;
     border-radius: 6px;
     box-shadow: -8px -3px 15px #97b4b8;
 }
 
-.options-list__item {
-    margin-top: 25px;
+.housing-main {
+    width: 70%;
+    margin: 10px 20px 10px 5px;
+    padding: 10px 25px;
+    background: #e0e9eb;
+    border-radius: 6px;
+    box-shadow: 8px -3px 15px #97b4b8;
+}
+
+/* aside */
+
+.options-container,
+.reservation-btn,
+.check-options-icon {
+    margin: 25px 10px;
+}
+
+.option-block {
+    margin-bottom: 25px;
     color: #2e0c20;
     font-size: 18px;
 }
 
-.options-list__item p {
-    margin-bottom: 0;
-}
-
-.options-list__item > input {
+.option-input {
     width: 250px;
     color: #2e0c20;
     font-size: 16px;
@@ -35,20 +45,55 @@
     border: none;
 }
 
-.housing-main-section {
-    width: 75%;
-    padding: 10px 25px;
-    background: #e0e9eb;
-    border-radius: 6px;
-    box-shadow: 8px -3px 15px #97b4b8;
+#check-options {
+    display: none;
 }
 
+.check-options-icon {
+    display: none;
+}
 
+.reservation-btn {
+    width: 260px;
+    height: 70px;
+    color: #4D1335;
+    font-size: 26px;
+    background: linear-gradient(0deg, #7e4b6a 0%, #e08ab1 100%);
+    border: #ad807b;
+    border-radius: 8px;
+}
+
+.reservation-btn:hover {
+    cursor: pointer;
+    color: #3d0d29;
+    background: linear-gradient(0deg, #6b3d59 0%, #c9759b 100%);
+}
+
+/* main */
+
+.carousel-section-wrapper {
+    margin-bottom: 20px;
+}
+
+.carousel-item {
+    height: 500px;
+    width: 100%;
+}
+
+.d-block {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.housing-address {
+    margin-bottom: 10px;
+}
 
 .housing-address > img {
     width: 25px;
-    /* position: relative;
-    top: 6px; */
+    position: relative;
+    top: 6px;
 }
 
 .stars-rating__item {
@@ -63,16 +108,23 @@
     opacity: 0.5;
 }
 
-
-.carousel-item {
-    height: 500px;
-    width: 100%;
+.short-description {
+    margin-bottom: 20px;
 }
 
-.d-block {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+.housing-section {
+    padding: 10px 30px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    box-shadow: -5px 5px 15px #97b4b8;
+    background: #fff2c8;
+}
+
+
+
+.section-name {
+    color: #6a1b4a;
+    margin-top: 20px;
 }
 
 
@@ -83,16 +135,76 @@
     border-radius: 50%;
 }
 
+.reviews-list__item {
+    padding: 10px;
+    margin: 10px 0;
+    color: #4D1335;
+    background: #f5c5e256;
+    box-shadow: 0 0 10px #c9759b;
+}
 
 
 @media screen and (max-width: 1000px) {
-
+    .option-input {
+        width: 200px;
+    }
+    .reservation-btn {
+        width: 210px;
+    }
 }
 
 @media screen and (max-width: 780px) {
-
+    .page-wrapper {
+        flex-direction: column;
+        margin: 0;
+    }
+    .housing-aside,
+    .housing-main {
+        width: 100%;
+        margin: 0 auto;
+        padding: 10px 0;
+        border-radius: 0;
+        box-shadow: none;
+    }
+    .housing-aside {
+        padding-left: 25px;
+    }
+    .housing-section {
+        border-radius: 0;
+    }
+    .options-container {
+        display: flex;
+        flex-direction: column;
+    }
+    .options-container, .reservation-btn, .check-options-icon {
+        margin: 0;
+    }
+    .short-description,
+    h1.section-name {
+        margin: 10px 30px;
+    }
+    .check-options-icon {
+        display: inline-block;
+        position: relative;
+        top: 6px;
+        cursor: pointer;
+        margin-right: 30px;
+    }
+    .reservation-btn {
+        height: 40px;
+        font-size: 22px;
+    }
+    .housing-main {
+        padding-top: 0;
+    }
+    .options-container {
+        display: none;
+    }
+    #check-options:checked ~ .options-container {
+		display: flex;
+	}
 }
 
 @media screen and (max-width: 530px) {
-    
+
 }
