--- a/styles/reservation.css
+++ b/styles/reservation.css
@@ -13,6 +13,28 @@
     border-radius: 5px;
     box-shadow: -5px 5px 15px #97b4b8;
     background: #fff2c8;
+    color: #2e0c20;
+    font-size: 18px;
+}
+
+.section-name {
+    color: #6a1b4a;
+    margin-top: 20px;
+    margin-bottom: 6px;
+}
+
+.date-subsection {
+    margin: 10px 0;
+}
+
+.date-input,
+.date-select {
+    width: 150px;
+    color: #2e0c20;
+    font-size: 16px;
+    padding: 2px 5px;
+    border-radius: 5px;
+    border: none;
 }
 
 
