--- a/styles/reservation.css
+++ b/styles/reservation.css
@@ -28,7 +28,9 @@
 }
 
 .date-input,
-.date-select {
+.date-select,
+.guest-input,
+.target-select {
     width: 150px;
     color: #2e0c20;
     font-size: 16px;
@@ -37,9 +39,73 @@
     border: none;
 }
 
+.guests h5 {
+    font-size: 18px;
+}
 
+.guest-info__item {
+    padding-bottom: 10px;
+}
 
+.sum-value {
+    font-size: 22px;
+}
+
+.add-guest {
+    cursor: pointer;
+    padding: 15px 0;
+    font-weight: bold;
+}
+
+.plus-guest {
+    font-size: 22px;
+    position: relative;
+    top: 2px;
+}
+
+#pets {
+    position: relative;
+    bottom: 2px;
+}
+
+.payment-list__item {
+    margin: 25px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
 .payment-list__item > img {
     height: 50px;
+}
+
+.pay-btn {
+    width: 200px;
+    height: 50px;
+    color: #4D1335;
+    font-size: 24px;
+    background: linear-gradient(0deg, #7e4b6a 0%, #e08ab1 100%);
+    border: #ad807b;
+    border-radius: 8px;
+    margin-left: 5px;
+    cursor: pointer;
+}
+
+.pay-btn:hover {
+    cursor: pointer;
+    color: rgb(61, 13, 41);
+    background: linear-gradient(0deg, #6b3d59 0%, #c9759b 100%);
+}
+
+@media screen and (max-width: 530px) {
+    .date-subsection {
+        display: flex;
+        flex-direction: column;
+    }
+    .date-input {
+        margin-bottom: 10px;
+    }
+    .guest-input {
+        display: block;
+    }
 }
