my_reservations page

--- a/styles/authorization.css
+++ b/styles/authorization.css
@@ -41,7 +41,7 @@ body {
     color: #6a1b4a;
 }
 .dws-form a:hover {
-    color: #e08ab1;
+    color: #b16f8c;
 }
 .dws-form ul {
     list-style: none;
