--- a/styles/add_review.css
+++ b/styles/add_review.css
@@ -9,33 +9,8 @@ h1 {
     color: #6a1b4a;
 }
 
-.toggles {
-    margin: 20px 0;
-}
-
-.toggles button {
-    border: none;
-    background: #e0e9eb;
-    color: #6a1b4a;
-    cursor: pointer;
-    font-size: 18px;
-    margin: 0 5px;
-}
-
-.toggles button:hover {
-    color: #b16f8c;
-}
-
-.toggles button:after {
-    content: " / ";
-}
-
-.toggles button:last-child:after {
-    content: "";
-}
-
-.reservation-card {
-    display: flex;
+.reservation-card,
+.review-section {
     padding: 20px;
     margin-bottom: 15px;
     border-radius: 5px;
@@ -44,12 +19,16 @@ h1 {
     color: #2e0c20;
 }
 
+.reservation-card {
+    display: flex;
+}
+
 .housing-description {
     position: relative;
     width: 100%;
 }
 
-.review {
+.rewiew {
     position: absolute;
     bottom: 20px;
 }
@@ -60,12 +39,6 @@ h1 {
 
 .housing-description .housing-name {
     color: #6a1b4a;
-}
-
-.description-top {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 10px;
 }
 
 .variant-image {
@@ -83,6 +56,57 @@ h1 {
     top: 6px;
 }
 
+.common-rating {
+    display: flex;
+}
+
+.common-rating > p {
+    margin-right: 10px;
+}
+
+.stars-rating__item {
+    display: inline-block;
+}
+
+.stars-rating__item > img {
+    width: 15px;
+}
+
+.icon-star-black {
+    opacity: 0.5;
+}
+
+.rating-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px 0;
+}
+
+.rating-list__item {
+    margin-right: 40px;
+}
+
+.comment-block {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 10px 0;
+}
+
+.comment-header {
+    color: #6a1b4a;
+    margin-right: 20px;
+}
+
+.comment-area {
+    color: #2e0c20;
+    font-size: 16px;
+    padding: 2px 5px;
+    border-radius: 5px;
+    border: none;
+    width: 60%;
+}
+
 .review-btn {
     width: 200px;
     padding: 10px;
@@ -92,6 +116,7 @@ h1 {
     border: #ad807b;
     border-radius: 8px;
     cursor: pointer;
+    margin-top: 20px;
 }
 
 .review-btn:hover {
@@ -100,25 +125,14 @@ h1 {
     background: linear-gradient(0deg, #6b3d59 0%, #c9759b 100%);
 }
 
-.review-btn.no-review {
-    background: linear-gradient(0deg, #816b79 0%, #e0c0cf 100%);
-}
-
-.review-btn.no-review:hover {
-    cursor: not-allowed;
-}
 
 @media screen and (max-width: 780px) {
     .reservation-card,
     .description-top {
         flex-direction: column;
     }
-    .review {
-        position: static;
-        margin-top: 20px;
-    }
-    
 }
+
 
 @media screen and (max-width: 530px) {
     .carousel-wrapper {
@@ -127,8 +141,20 @@ h1 {
     .variant-image {
         width: 100%;
     }
+    .rewiew-btn {
+        padding: 5px;
+        font-size: 20px;
+    }
+    .common-rating,
+    .comment-block {
+        flex-direction: column;
+    }
+    .comment-area {
+        width: 80%;
+    }
     .review-btn {
         padding: 5px;
         font-size: 20px;
+        width: 130px;
     }
 }
