--- a/styles/landlords_vacancies.css
+++ b/styles/landlords_vacancies.css
@@ -85,6 +85,12 @@ h1 {
     margin-top: 20px;
 }
 
+.buttons button:hover {
+    cursor: pointer;
+    color: #3d0d29;
+    background: linear-gradient(0deg, #6b3d59 0%, #c9759b 100%);
+}
+
 @media screen and (max-width: 780px) {
     .vacancy-card {
         flex-direction: column;
