--- a/styles/main_page.css
+++ b/styles/main_page.css
@@ -53,6 +53,7 @@
 
 .search-form-content {
     display: flex;
+    margin-top: 30px;
 }
 
 .search-form-content-inputs {
@@ -64,7 +65,8 @@
     text-shadow: 1px 1px 2px #021118, 0 0 1.5em #053841;
     font-size: 16px;
     position: relative;
-    left: 15px;
+    bottom: 20px;
+    left: 6px;
 }
 
 .main__input {
