--- a/styles/my_requests.css
+++ b/styles/my_requests.css
@@ -7,7 +7,7 @@
 
 h1 {
     margin-left: 30px;
-    color: #2e0c20;
+    color: #6a1b4a;
 }
 
 .requests-section {
@@ -30,13 +30,35 @@ h1 {
     border-radius: 5px;
 }
 
+.request-block {
+    margin: 10px 0 20px;
+    display: flex;
+}
+
+.request-title {
+    margin-right: 30px;
+    width: 185px;
+}
+
+.request-block a {
+    color: #4D1335;
+    font-weight: bold;
+}
+
+.request-block a:hover {
+    color: #7e4b6a;
+}
+
 .request-input {
-    width: 150px;
     color: #2e0c20;
     font-size: 16px;
     padding: 2px 5px;
     border-radius: 5px;
     border: none;
+}
+
+.request-input + .request-input {
+    margin-left: 10px;
 }
 
 .confirm, .refuse {
@@ -49,4 +71,23 @@ h1 {
     border: #ad807b;
     border-radius: 8px;
     margin: 10px 0;
+}
+
+.confirm:hover, .refuse:hover {
+    cursor: pointer;
+    color: #3d0d29;
+    background: linear-gradient(0deg, #6b3d59 0%, #c9759b 100%);
+}
+
+@media screen and (max-width: 780px) {
+    .request-block {
+        flex-direction: column;
+    }
+    .request-title {
+        width: 100%;
+    }
+    .request-input + .request-input {
+        margin-left: 0;
+        margin-top: 10px;
+    }
 }
